WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133381
Added a missing @result to WKPreferences headerdoc
https://bugs.webkit.org/show_bug.cgi?id=133381
Summary
Added a missing @result to WKPreferences headerdoc
Geoffrey Garen
Reported
2014-05-29 11:37:26 PDT
Added a missing @result to WKPreferences headerdoc
Attachments
Patch
(1.34 KB, patch)
2014-05-29 11:37 PDT
,
Geoffrey Garen
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2014-05-29 11:37:48 PDT
Created
attachment 232256
[details]
Patch
Geoffrey Garen
Comment 2
2014-05-29 11:38:32 PDT
Committed
r169458
: <
http://trac.webkit.org/changeset/169458
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug