Added a missing @result to WKPreferences headerdoc https://bugs.webkit.org/show_bug.cgi?id=133381

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKPreferences.h:


Canonical link: https://commits.webkit.org/151408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169458 268f45cc-cd09-0410-ab3c-d52691b4dbfc